# lex

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
src/lex/: checks.py  cli.py
src/lex/builtins/: dotenv_format.py  file_structure.py  markdown_links.py
tests/: test_builtins.py  test_cli.py
